<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/setComplexityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setComplexity"
            android:text="@string/set_complexity" />

        <TextView
            android:id="@+id/showMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc" />

        <TextView
            android:id="@+id/showAttemptsLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5" />

        <EditText
            android:id="@+id/txt_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/guessButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="guess"
            android:text="@string/guessText" />

        <Button
            android:id="@+id/restartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restartText" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>